# teachingplugin

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
Teaching/: ActivityEditor.cpp  ActivityEditor.h  ActivityEditorBase.cpp  ActivityEditorBase.h  ArgumentDialog.cpp  ArgumentDialog.h  ArgumentDialogMock.cpp  ArgumentEstimator.h  CMakeLists.txt  Calculator.cpp  Calculator.h  ChoreonoidUtil.cpp  ChoreonoidUtil.h  CommandDefTypes.h  CommonController.h  ControllerBase.h  ControllerManager.cpp  ControllerManager.h  DataBaseDetailManager.cpp  DataBaseFlowManager.cpp  DataBaseManager.cpp  DataBaseManager.h  DataBaseMasterManager.cpp  DecisionDialog.cpp  DecisionDialog.h  ExecEnvDialog.cpp  ExecEnvDialog.h  FlowActivityEditor.cpp  FlowActivityEditor.h  FlowSearchDialog.cpp  FlowSearchDialog.h  FlowSearchDialogMock.cpp  FlowView.cpp  FlowView.h  FlowViewMock.cpp  LoggerUtil.cpp  LoggerUtil.h  MetaDataView.cpp  MetaDataView.h  MetaDataViewMock.cpp  (+55 more)
Teaching/NodeEditor/: ActivityEditorBase.cpp  ActivityEditorBase.hpp  Connection.cpp  Connection.hpp  ConnectionBlurEffect.hpp  ConnectionGeometry.hpp  ConnectionGraphicsObject.cpp  ConnectionGraphicsObject.hpp  ConnectionPainter.cpp  ConnectionPainter.hpp  ConnectionState.cpp  ConnectionState.hpp  ConnectionStyle.cpp  ConnectionStyle.hpp  DataModelRegistry.hpp  Export.hpp  FlowEditor.cpp  FlowEditor.hpp  FlowScene.cpp  FlowScene.hpp  FlowViewStyle.cpp  FlowViewStyle.hpp  Node.cpp  Node.hpp  NodeConnectionInteraction.cpp  NodeConnectionInteraction.hpp  NodeData.hpp  NodeDataModel.hpp  NodeGeometry.hpp  NodeGraphicsObject.cpp  NodeGraphicsObject.hpp  NodePainter.cpp  NodePainter.hpp  NodePainterDelegate.hpp  NodeState.cpp  NodeState.hpp  NodeStyle.cpp  NodeStyle.hpp  ParamWidget.cpp  ParamWidget.hpp  (+5 more)
Teaching/po/: ja.po
Teaching/pybind11/: CMakeLists.txt  Interpolator.h  PyTeachingPlugin.cpp  TPUtil.cpp  TPUtil.h
doc/: 3d_model.rst  Makefile  conf.py  configure.rst  controller.rst  customize.rst  debug_mode.rst  faq.rst  fileio.rst  formats.rst  index.rst  installation.rst  make.bat  meta_data.rst  search_task.rst  task_model.rst  workflow.rst
misc/PythonPlugin/: PythonExecutor.cpp
misc/script/: install-requisites-ubuntu-18.04.sh
share/DB/: 20171120UpdateTables.sql  20171231UpdateTables.sql  20180123UpdateTables.sql  20180127UpdateTables.sql  20180211UpdateTables.sql  20180218UpdateTables.sql  20180304UpdateTables_AIST.sql  20180614UpdateTables_AIST.sql  20180626UpdateTables.sql  20180702UpdateTables.sql  20180805UpdateTables.sql  20190920UpdateTables.sql  20191207UpdateTables.sql  DatabaseDefinition.txt
share/data/: 20171118DatabaseDefinition.txt  CBM3-10.wrl  MA266Hrp.wrl  SCB4-10.wrl  SEBZ16-150-寸法png  SEBZ16-150_rail.wrl  SEBZ16-270_block.wrl  SGCB40-40-5.wrl  SGRB40-40-12.wrl  SGRB40-40-12Hrp.wrl  SampleManipData.yaml  TMI_SampleManipData.yaml  TMI_greentea350.yaml  TMI_greentea350_capping.yaml  TMI_greentea350_capping2.yaml  TMI_guideblock_insertion.yaml  TMI_insert_pulley1.yaml  TMI_insert_pulley2.yaml  TMI_move_greentea350.yaml  TMI_move_petfruit.yaml  TMI_petfruit_capping.yaml  TMI_put_belt.yaml  TMI_put_rail_on_board.yaml  TMI_relocate_board.yaml  TMI_relocate_board_horizontally.yaml  TMI_relocate_board_topgrasp.yaml  TMI_screw_into_rail1.yaml  TMI_screw_into_rail2.yaml  TMI_test.yaml  TMI_test_comment.yaml  TMI_turn_torso20.yaml  TaskDefCapping.yaml  TaskDefEmpty.yaml  TaskDefGoInitial.yaml  TaskDefPickPlace.yaml  TaskDefPickPlace.yaml.v1  TaskDefPickScrew.yaml  TaskDefPickSlide.yaml  TaskDefSampleParts.yaml  TaskDefTurnTorso.yaml  (+6 more)
share/data/PlasticBottle/: box_tray.wrl  box_trayHrp.wrl  greentea350.wrl  greentea350.wrl.REMOVED.git-id  greentea350_bottle.wrl  greentea350_bottle.wrl.REMOVED.git-id  greentea350_bottleHrp.wrl  greentea350_cap.wrl  greentea350_capHrp.wrl  greentea350hrp.wrl  petfruit.wrl  petfruit.wrl.REMOVED.git-id  petfruitHrp.wrl  petfruit_bottle.wrl  petfruit_bottle.wrl.REMOVED.git-id  petfruit_bottleHrp.wrl  petfruit_cap.wrl  petfruit_capHrp.wrl
share/data/SII2016_data/: CBM3-10.wrl  CBM3-10Hrp.wrl  SEBZ16-150_rail.wrl  SEBZ16-150_railHrp.wrl  SEBZ16-270_blockHrp.wrl  board.wrl  boardHrp.wrl  board_pose_change.yaml  cap_plastic_bottle.yaml  cap_plastic_bottle_juice.yaml  empty.yaml  fixture01.wrl  fixture01Hrp.wrl  guid_block_insertion.yaml.orig  guide_block_insertion.yaml  move_plastic_bottle.yaml  move_plastic_bottle_juice.yaml  pully_insertion1.yaml  pully_insertion2.yaml  put_a_belt.yaml  put_linear_guide.yaml  screw_a_rail1.yaml  screw_a_rail2.yaml  screw_feeder.wrl
share/data/YCBAirplane/: YCBAirplane_before_boltingHrp.wrl  body_lower.wrl  body_lowerHrp.wrl  body_upperHrp.wrl  bolt.wrl  cockpit.wrl  cockpitHrp.wrl  driver_tip.wrl  driver_tipHrp.wrl  fixture.stl  front_stay.wrl  front_stayHrp.wrl  front_wheel.wrl  front_wheelHrp.wrl  nut.wrl  nutHrp.wrl  propeller1.wrl  propeller1Hrp.wrl  propeller2Hrp.wrl  rear_stay.wrl  rear_stayHrp.wrl  rear_wheel1Hrp.wrl  rear_wheel2Hrp.wrl  wing_bottom.wrl  wing_bottomHrp.wrl  wing_topHrp.wrl
share/data/YCBtmi/: YCBAirplane_before_boltingHrp.wrl  YCBpick-bit.yaml  YCBpick-screw.yaml  YCBpick-transport-place-screw.yaml  YCBpick-transport-screwing-place.yaml  YCBplace-bit.yaml  YCBplace-screw.yaml  YCBscrewing-bit.yaml  YCBtransport-bit.yaml  YCBtransport-screw.yaml  body_upper.wrl  bolt.wrl  boltHrp.wrl  cockpit.wrl  driver_bit_handle.stl  driver_tipHrp.wrl  finger_attachments.stl  (+11 more)
share/project/: README  Setting.prm  UpdateTables.sql  __default__.py  define_tables.sql  hironx_controller.py  init.py  init_ros.py  rtc.conf  screw_insertion.py  setup.sh  start_teachingPlugin.desktop  teachingDB.beltshuttle_assembly.sqlite3.REMOVED.git-id  teachingDB.robomech2016.eng.sqlite3.REMOVED.git-id  teachingDB.robomech2016.sqlite3.REMOVED.git-id  teachingDB.sqlite3  teachingDB.sqlite3.REMOVED.git-id  teachingDB20180222.sqlite3  teaching_plugin.cnoid  teaching_plugin2.cnoid  teaching_plugin_UR3dual.cnoid  teaching_plugin_UR5.cnoid  test_Ubuntu191106.py  tm_tool.py  ur3dual_controller.py
share/scripts/: UpdateTables20161221.sql  check_code.sh  define_tables.sql
(+121 files in other folders)
